Switched for-loops to streams.  Added in palantir formatting via spotless.  Formatted classes.